--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -1,6 +1,5 @@
 @use '@innomotics/brand-experience/styles/colors';
 @use '@innomotics/brand-experience/styles/componentmixins';
-@use '../../../styles/siemens-ix/scrollbar';
 
 @mixin light-base {
   background-color: colors.$background-light-200;
@@ -29,7 +28,6 @@
   &.textareamode {
     height: unset;
     max-height: unset;
-    // padding: 3px; //16px;
 
     display: inline-block;
 
@@ -168,31 +166,8 @@
   }
 
   ::slotted(textarea) {
-    // @include scrollbar.scrollbar();
-
     scrollbar-color: colors.$secondary-300 colors.$secondary-800;
     scrollbar-width: thin;
-
-    // &::-webkit-scrollbar {
-    //   width: 16px;
-    //   height: 16px;
-    // }
-
-    // &::-webkit-scrollbar-corner,
-    // &::-webkit-scrollbar-track {
-    //   background-color: rgb(64, 64, 64);
-    // }
-
-    // &::-webkit-scrollbar-thumb {
-    //   background-color: rgb(96, 96, 96);
-    //   background-clip: padding-box;
-    //   border: 2px solid transparent;
-    // }
-
-    // &::-webkit-scrollbar-button {
-    //   background-color: rgb(64, 64, 64);
-    //   display: none;
-    // }
 
     width: 100%;
     height: 100%;
@@ -253,4 +228,8 @@
   right: -12px;
   cursor: nw-resize;
   z-index: 1;
+
+  &.seizer-with-scrollbar {
+    right: -4px;
+  }
 }
