--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -28,8 +28,10 @@
   &.textareamode {
     height: unset;
     max-height: unset;
+    margin: 0;
+    padding: 16px 5px 16px 16px;
 
-    display: inline-block;
+    display: block;
 
     position: relative;
     pointer-events: all;
@@ -83,6 +85,11 @@
         border: 1px solid colors.$additional-light-300;
         background-color: colors.$transparency-light-100;
       }
+    }
+
+    ::slotted(textarea) {
+      scrollbar-color: colors.$secondary-800 colors.$secondary-200;
+      pointer-events: all;
     }
 
     &.focused {
@@ -148,6 +155,17 @@
       }
     }
 
+    ::slotted(textarea) {
+      scrollbar-color: colors.$secondary-300 colors.$secondary-800;
+      pointer-events: all;
+
+      &.disabled,
+      &:disabled,
+      &:read-only {
+        pointer-events: all;
+      }
+    }
+
     &.focused {
       @include componentmixins.focus;
     }
@@ -166,7 +184,6 @@
   }
 
   ::slotted(textarea) {
-    scrollbar-color: colors.$secondary-300 colors.$secondary-800;
     scrollbar-width: thin;
 
     width: 100%;
@@ -205,16 +222,20 @@
         color: colors.$text-dark-lowemphasis;
       }
     }
-  }
 
-  .float {
-    transform: translate(0rem, 0.5rem) scale(1);
-    font-size: 12px;
-  }
+    &.textareamode {
+      transform: translate(0rem, -0.2rem) scale(1);
+    }
 
-  .floatarea {
-    transform: translate(0rem, 0.3rem) scale(1);
-    font-size: 12px;
+    &.float {
+      transform: translate(0rem, 0.5rem) scale(1);
+      font-size: 12px;
+    }
+
+    &.floatarea {
+      transform: translate(0rem, -0.9rem) scale(1);
+      font-size: 12px;
+    }
   }
 
   &.disabled {
@@ -224,12 +245,12 @@
 
 .seizer {
   position: absolute;
-  bottom: -12px;
-  right: -12px;
+  bottom: -17px;
+  right: -15px;
   cursor: nw-resize;
   z-index: 1;
 
   &.seizer-with-scrollbar {
-    right: -4px;
+    // right: -4px;
   }
 }
