--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -31,8 +31,6 @@
     margin: 0;
     padding: 16px 5px 16px 16px;
 
-    display: block;
-
     position: relative;
     pointer-events: all;
   }
@@ -52,6 +50,7 @@
     ::slotted(input),
     ::slotted(textarea) {
       @include light-base;
+
       color: colors.$text-light-highemphasis;
 
       &:-webkit-autofill {
@@ -87,11 +86,6 @@
       }
     }
 
-    ::slotted(textarea) {
-      scrollbar-color: colors.$secondary-800 colors.$secondary-200;
-      pointer-events: all;
-    }
-
     &.focused {
       @include componentmixins.focus;
     }
@@ -103,6 +97,23 @@
 
     &.disabled {
       background-color: colors.$transparency-light-200;
+    }
+
+    ::slotted(textarea) {
+      background-color: transparent !important;
+      pointer-events: all;
+
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: colors.$secondary-800;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: colors.$secondary-200;
+      }
     }
   }
 
@@ -120,6 +131,7 @@
     ::slotted(input),
     ::slotted(textarea) {
       @include dark-base;
+
       color: colors.$text-dark-highemphasis;
 
       &:-webkit-autofill {
@@ -155,17 +167,6 @@
       }
     }
 
-    ::slotted(textarea) {
-      scrollbar-color: colors.$secondary-300 colors.$secondary-800;
-      pointer-events: all;
-
-      &.disabled,
-      &:disabled,
-      &:read-only {
-        pointer-events: all;
-      }
-    }
-
     &.focused {
       @include componentmixins.focus;
     }
@@ -173,6 +174,29 @@
     &.invalid {
       box-shadow: inset 0px 0px 0px 1px colors.$status-dark-error;
       border: 1px solid colors.$status-dark-error;
+    }
+
+    ::slotted(textarea) {
+      background-color: transparent !important;
+      pointer-events: all;
+
+      &.disabled,
+      &:disabled,
+      &:read-only {
+        pointer-events: all;
+      }
+
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: colors.$secondary-300;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: colors.$secondary-800;
+      }
     }
   }
 
@@ -184,11 +208,9 @@
   }
 
   ::slotted(textarea) {
-    scrollbar-width: thin;
+    width: 100% !important;
+    height: 100% !important;
 
-    width: 100%;
-    height: 100%;
-    padding-top: 20px;
     border: 0;
     outline: 0;
     resize: none;
@@ -223,18 +245,18 @@
       }
     }
 
-    &.textareamode {
-      transform: translate(0rem, -0.2rem) scale(1);
-    }
-
     &.float {
       transform: translate(0rem, 0.5rem) scale(1);
       font-size: 12px;
     }
 
-    &.floatarea {
-      transform: translate(0rem, -0.9rem) scale(1);
-      font-size: 12px;
+    &.textareamode {
+      transform: translate(0rem, -0.2rem) scale(1);
+
+      &.floatarea {
+        transform: translate(0rem, -0.9rem) scale(1);
+        font-size: 12px;
+      }
     }
   }
 
@@ -251,6 +273,6 @@
   z-index: 1;
 
   &.seizer-with-scrollbar {
-    // right: -4px;
+    // Currently seizer is not moved
   }
 }
