--- a/packages/stencil-lib/styles/components/inno-input.scss
+++ b/packages/stencil-lib/styles/components/inno-input.scss
@@ -36,6 +36,22 @@ inno-input {
         pointer-events: none;
       }
     }
+
+    textarea {
+      pointer-events: all;
+
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: colors.$secondary-800;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: colors.$secondary-200;
+      }
+    }
   }
 
   &.dark {
@@ -63,7 +79,6 @@ inno-input {
     }
 
     textarea {
-      background-color: transparent !important;
       pointer-events: all;
 
       &.disabled,
@@ -84,5 +99,14 @@ inno-input {
         background: colors.$secondary-800;
       }
     }
+  }
+
+  textarea {
+    width: 100%;
+    height: 100%;
+
+    border: none;
+    outline: none;
+    resize: none;
   }
 }
