inno-date-picker focus cleanup, inno-input textarea clenaup

--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -26,7 +26,7 @@
   cursor: text;
 
   &.textareamode {
-    height: unset;
+    height: 100%;
     max-height: unset;
     margin: 0;
     padding: 16px 5px 20px 16px;
