--- a/packages/stencil-lib/src/components/inno-loader/inno-loader.scss
+++ b/packages/stencil-lib/src/components/inno-loader/inno-loader.scss
@@ -21,6 +21,10 @@
       content: '';
       animation: rotate-spinner 1s infinite linear;
     }
+
+    &.thin::before {
+      border-width: 4px;
+    }
   }
   &.dark {
     &::before {
@@ -38,6 +42,10 @@
       border-radius: 50%;
       content: '';
       animation: rotate-spinner 1s infinite linear;
+    }
+
+    &.thin::before {
+      border-width: 4px;
     }
   }
 
