Fixed simplebar styling and mask application.

--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -3,6 +3,7 @@
 @use './components/inno-pane';
 @use './components/inno-status-message-container';
 @use './components/inno-input';
+@use 'simplebar/dist/simplebar.min.css';
 
 @forward '@innomotics/brand-experience-fonts/dist/styles/innomoticsHaffer';
 @forward '@innomotics/brand-experience-icons/dist/styles/innomoticsIcons';
