Add fit-content modal size

--- a/packages/stencil-lib/src/components/inno-modal/inno-modal.scss
+++ b/packages/stencil-lib/src/components/inno-modal/inno-modal.scss
@@ -55,6 +55,10 @@
     width: 95%;
   }
 
+  .modal-size-fit-content {
+    width: fit-content;
+  }
+
   .modal-size-full-screen {
     left: 0 !important;
     top: 0 !important;
