--- a/packages/stencil-lib/styles/_colors.scss
+++ b/packages/stencil-lib/styles/_colors.scss
@@ -13,13 +13,6 @@ $secondary-700: #566b73;
 $secondary-800: #40545b;
 $secondary-900: #2a3b40;
 
-$charts-100: #86a3ff;
-$charts-200: #6060f9;
-$charts-300: #ddabff;
-$charts-400: #cc68fa;
-$charts-500: #4ed69b;
-$charts-600: #009b6a;
-
 $error-100: #f68181;
 $error-200: #cb0e0e;
 $warning-100: #ff853f;
@@ -93,3 +86,50 @@ $status-dark-internal: $internal-100;
 
 $transparency-dark-100: rgba($primary-300, 0.1);
 $transparency-dark-200: rgba($primary-300, 0.4);
+
+
+$chart-25: #6060F9;
+$chart-50: #86A3FF;
+$chart-75: #CC68FA;
+$chart-100: #DDABFF;
+$chart-125: #00A3A8;
+$chart-150: #AA5103;
+$chart-175: #FD9E4B;
+$chart-200: #5B011C;
+$chart-225: #FF145A;
+$chart-250: #FFD8E4;
+$chart-275: #009B6A;
+$chart-300: #4ED69B;
+$chart-325: #1B1B81;
+$chart-350: #C3D2FF;
+$chart-375: #F051A0;
+$chart-400: #F36EB0;
+$chart-425: #AA880F;
+$chart-450: #BC991D;
+
+$chart-light-1: $primary-200;
+$chart-light-2: $secondary-600;
+$chart-light-3: $chart-25;
+$chart-light-4: $chart-75;
+$chart-light-5: $chart-125;
+$chart-light-6: $chart-150;
+$chart-light-7: $chart-225;
+$chart-light-8: $chart-200;
+$chart-light-9: $chart-275;
+$chart-light-10: $chart-325;
+$chart-light-11: $chart-375;
+$chart-light-12: $chart-425;
+
+$chart-dark-1: $primary-100;
+$chart-dark-2: $primary-300;
+$chart-dark-3: $chart-50;
+$chart-dark-4: $chart-100;
+$chart-dark-5: $chart-125;
+$chart-dark-6: $chart-175;
+$chart-dark-7: $chart-225;
+$chart-dark-8: $chart-250;
+$chart-dark-9: $chart-300;
+$chart-dark-10: $chart-350;
+$chart-dark-11: $chart-400;
+$chart-dark-12: $chart-450;
+
