--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -24,6 +24,7 @@
   margin: 5px 5px 8px 5px;
   border: 1px solid colors.$additional-light-300;
   cursor: text;
+  position: relative;
 
   &.textareamode {
     height: 100%;
