Auto resize InnoInput and InnoSelect labels so they won't overflow.

--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -134,6 +134,9 @@
     transition: 0.2s cubic-bezier(0.84, 0, 0.58, 1) all;
     transform: translate(0rem, 1.2rem) scale(1);
     position: absolute;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.light {
       &.invalid {
