--- a/packages/stencil-lib/src/components/inno-select/inno-select.scss
+++ b/packages/stencil-lib/src/components/inno-select/inno-select.scss
@@ -76,6 +76,10 @@
         }
 
         .label {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+
           &.light {
             color: colors.$secondary-800;
 
@@ -101,6 +105,9 @@
         .label-value {
           font-size: 16px;
           font-weight: 400;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           &.light {
             color: colors.$primary-200;
@@ -154,9 +161,12 @@
     }
 
     .select-item.icon-driven {
-      .content-wrapper {
+      .icon-driven-label {
         font-size: 16px;
         font-weight: 400;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
