--- a/packages/stencil-lib/src/components/inno-select/inno-select.scss
+++ b/packages/stencil-lib/src/components/inno-select/inno-select.scss
@@ -58,21 +58,24 @@
     min-height: 56px;
 
     .select-header {
-      padding: 0px 16px 0px 16px;
+      padding: 8px 16px 8px 16px;
       box-sizing: border-box;
-      height: 56px;
       height: 56px;
       max-height: 56px;
       min-height: 56px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      position: relative;
 
       .content {
         display: flex;
+        overflow-x: hidden;
 
         &.filled {
-          flex-direction: column;
+          .label-value {
+            margin-top: 16px;
+          }
         }
 
         .label {
@@ -98,7 +101,8 @@
         }
 
         .float {
-          transform: translate(0rem, -0.3rem) scale(1);
+          position: absolute;
+          top: 8px;
           font-size: 12px;
         }
 
