--- a/packages/stencil-lib/src/components/inno-select/inno-select.scss
+++ b/packages/stencil-lib/src/components/inno-select/inno-select.scss
@@ -72,7 +72,7 @@
         display: flex;
         overflow-x: hidden;
 
-        &.filled {
+        &.filled:not(.empty-label) {
           .label-value {
             margin-top: 16px;
           }
