focus mixin fix

--- a/packages/stencil-lib/styles/_componentmixins.scss
+++ b/packages/stencil-lib/styles/_componentmixins.scss
@@ -1,7 +1,7 @@
 @use './colors';
 
 @mixin focus {
-  outline: colors.$interaction-light-focus;
+  outline-color: colors.$interaction-light-focus;
   outline-style: solid;
   outline-width: 2px;
   outline-offset: 2px;
