Add icon-font support to the inno-icon component

--- a/packages/stencil-lib/src/components/inno-icon/inno-icon.scss
+++ b/packages/stencil-lib/src/components/inno-icon/inno-icon.scss
@@ -4,8 +4,12 @@
     .icon-light {
         color: inherit;
     }
-    
+
     .icon-dark {
         color: inherit;
+    }
+
+    .icon-font {
+      font-family: 'InnomoticsUiIcons';
     }
 }
