--- a/packages/test-applications/react-test-app/src/App.scss
+++ b/packages/test-applications/react-test-app/src/App.scss
@@ -1,4 +1,4 @@
-@import "@innomotics/brand-experience/styles/innomotics.scss";
+@use "@innomotics/brand-experience/styles/innomotics.scss";
 
 /* #root {
   max-width: 1280px;
